OpenCL kernel compilation error in latest buildbot #46034

Closed
opened 2015-09-06 22:30:05 +02:00 by mathieu menuet · 5 comments

System Information
Win7 x64, R9 280X, Catalyst 15.8 beta

Blender Version
Broken: 14dd88e
Worked: 2.75a

Short description of error
OpenCL kernel compilation fails

Exact steps for others to reproduce the error
Open the barcelona scene from download section on Blender.org
render on GPU with OpenCL
You get this:

Device init success
Compiling OpenCL kernel ...
Build flags:  -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=4 -D__MAX_CLOSURE__=4
 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__
OpenCL kernel build output:
"C:\Users\test\AppData\Local\Temp\OCLF067.tmp.cl", line 23757: error: argument
          of type "float4" is incompatible with parameter of type
          "const float3"
                if(len_squared(cross(tri_b - tri_a, tri_c - tri_a)) < 1e-16f) {
                               ^

1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCLF067
.tmp.cl".
Frontend phase failed compilation.

OpenCL build failed: errors in console
Error: OpenCL build failed: errors in console
**System Information** Win7 x64, R9 280X, Catalyst 15.8 beta **Blender Version** Broken: 14dd88e Worked: 2.75a **Short description of error** OpenCL kernel compilation fails **Exact steps for others to reproduce the error** Open the barcelona scene from download section on Blender.org render on GPU with OpenCL You get this: ``` Device init success Compiling OpenCL kernel ... Build flags: -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=4 -D__MAX_CLOSURE__=4 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ OpenCL kernel build output: "C:\Users\test\AppData\Local\Temp\OCLF067.tmp.cl", line 23757: error: argument of type "float4" is incompatible with parameter of type "const float3" if(len_squared(cross(tri_b - tri_a, tri_c - tri_a)) < 1e-16f) { ^ 1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCLF067 .tmp.cl". Frontend phase failed compilation. OpenCL build failed: errors in console Error: OpenCL build failed: errors in console ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Sergey Sharybin self-assigned this 2015-09-07 08:50:25 +02:00

This issue was referenced by 1a7eca3c54

This issue was referenced by 1a7eca3c54179e831a98490fbf40ee518ae0b341

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@31448011b7

This issue was referenced by blender/cycles@31448011b740337cda525861f90e0a67c675dbae
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46034
No description provided.