Fix T46034: OpenCL kernel compilation error in latest buildbot

Simply expanded expression, so no float4->float3 conversion happens.